# sapcon-terminal

./: CMakeLists.txt  Qt_SAP_TERMINAL.pro  main.cpp  mainwindow.cpp  resource.qrc  serialcomm.cpp  serialcomm.h
snap/: snapcraft.yaml
